--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -1,5 +1,6 @@
 ﻿<link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../juicy-highlight/src/juicy-highlight.html">
+<link rel="import" href="juicy-tile-editor-font.html">
 <link rel="import" href="juicy-tile-editor-form.html">
 <link rel="import" href="juicy-tile-tree.html">
 <link rel="import" href="juicy-draggable.html" />
