--- a/src/juicy-resizable.html
+++ b/src/juicy-resizable.html
@@ -1,15 +1,13 @@
-﻿<link rel="import" href="../../polymer/polymer.html" />
-
-<polymer-element name="juicy-resizable" attributes="rightHandle leftHandle">
-    <template>
-        <style>
-            :host {
-                display: block;
-            }
-        </style>
-        <content id="content"></content>
-    </template>
-    <script>
+﻿<template id="juicy-resizable-element">
+    <style>
+        :host {
+            display: block;
+        }
+    </style>
+    <content id="content"></content>
+</template>
+<script>
+    (function (scriptDocument) {
         function clearSelection() {
             if (window.getSelection) {
                 window.getSelection().removeAllRanges();
@@ -18,84 +16,104 @@
             }
         }
 
-        Polymer("juicy-resizable", {
-            resizeElement: null,
-            resizeOffset: null,
-            down: false,
-            isRight: null,
-            rightHandle: null,
-            leftHandle: null,
-            domReady: function () {
-                var that = this;
+        var JuicyResizablePrototype = Object.create(HTMLElement.prototype);
 
-                this.resizeElement = this.children[0];
+        JuicyResizablePrototype.resizeElement = null;
+        JuicyResizablePrototype.resizeOffset = null;
+        JuicyResizablePrototype.down = false;
+        JuicyResizablePrototype.isRight = null;
+        JuicyResizablePrototype.rightHandle = null;
+        JuicyResizablePrototype.leftHandle = null;
 
+        JuicyResizablePrototype.attachedCallback = function () {
+            var that = this;
+            var root = this.createShadowRoot();
+            var template = scriptDocument.querySelector("#juicy-resizable-element");
+            var clone = document.importNode(template.content, true);
+
+            root.appendChild(clone);
+            this.resizeElement = this.children[0];
+
+            if (this.hasAttribute("rightHandle")) {
+                this.rightHandle = this.querySelector(this.attributes.rightHandle.nodeValue);
+                
                 if (this.rightHandle) {
-                    this.rightHandle = this.querySelector(this.rightHandle);
-                    this.leftHandle = this.querySelector(this.leftHandle);
-
-                    if (this.rightHandle) {
-                        this.rightHandle.addEventListener("mousedown", function (e) {
-                            that.rightHandle.classList.add("active");
-                            that.isRight = true;
-                            that.startResize(e);
-                        });
-                    }
-
-                    if (this.leftHandle) {
-                        this.leftHandle.addEventListener("mousedown", function (e) {
-                            that.leftHandle.classList.add("active");
-                            that.isRight = false;
-                            that.startResize(e);
-                        });
-                    }
-
-                    document.addEventListener("mousemove", this.handleResize.bind(this));
-                    document.addEventListener("mouseup", this.stopResize.bind(this));
+                    this.rightHandle.addEventListener("mousedown", function (e) {
+                        that.rightHandle.classList.add("active");
+                        that.isRight = true;
+                        that.startResize(e);
+                    });
                 }
-            },
-            startResize: function (e) {
-                var rect = this.resizeElement.getBoundingClientRect();
+            }
 
-                this.resizeOffset = {
-                    left: rect.left,
-                    right: rect.right
-                };
-
-                this.down = true;
-                this.fire("juicy-resizable-start", e);
-            },
-            handleResize: function (e) {
-                if (!this.down) {
-                    return;
-                }
-
-                clearSelection();
-
-                var w = null;
-
-                if (this.isRight) {
-                    w = parseInt(e.clientX - this.resizeOffset.left + 2);
-                } else {
-                    w = parseInt(this.resizeOffset.right - e.clientX);
-                }
-
-                this.resizeElement.style.width = w + "px";
-                this.fire("juicy-resizable-handle", e);
-            },
-            stopResize: function (e) {
-                this.down = false;
-
-                if (this.rightHandle) {
-                    this.rightHandle.classList.remove("active");
-                }
+            if (this.hasAttribute("leftHandle")) {
+                this.leftHandle = this.querySelector(this.attributes.leftHandle.nodeValue);
 
                 if (this.leftHandle) {
-                    this.leftHandle.classList.remove("active");
+                    this.leftHandle.addEventListener("mousedown", function (e) {
+                        that.leftHandle.classList.add("active");
+                        that.isRight = false;
+                        that.startResize(e);
+                    });
                 }
-
-                this.fire("juicy-resizable-stop", e);
             }
+
+            document.addEventListener("mousemove", this.handleResize.bind(this));
+            document.addEventListener("mouseup", this.stopResize.bind(this));
+        };
+
+        JuicyResizablePrototype.startResize = function (e) {
+            var rect = this.resizeElement.getBoundingClientRect();
+            var event = new Event("juicy-resizable-start", { detail: e });
+
+            this.resizeOffset = {
+                left: rect.left,
+                right: rect.right
+            };
+
+            this.down = true;
+            this.dispatchEvent(event);
+        };
+
+        JuicyResizablePrototype.handleResize = function (e) {
+            if (!this.down) {
+                return;
+            }
+
+            clearSelection();
+            e.preventDefault();
+
+            var w = null;
+            var event = new Event("juicy-resizable-handle", { detail: e });
+
+            if (this.isRight) {
+                w = parseInt(e.clientX - this.resizeOffset.left + 2);
+            } else {
+                w = parseInt(this.resizeOffset.right - e.clientX);
+            }
+
+            this.resizeElement.style.width = w + "px";
+            this.dispatchEvent(event);
+        };
+
+        JuicyResizablePrototype.stopResize = function (e) {
+            var event = new Event("juicy-resizable-stop", { detail: e });
+
+            this.down = false;
+
+            if (this.rightHandle) {
+                this.rightHandle.classList.remove("active");
+            }
+
+            if (this.leftHandle) {
+                this.leftHandle.classList.remove("active");
+            }
+
+            this.dispatchEvent(event);
+        };
+
+        window.JuicyResizableElement = document.registerElement("juicy-resizable", {
+            prototype: JuicyResizablePrototype
         });
-    </script>
-</polymer-element>
+    })(document.currentScript.ownerDocument);
+</script>
